--- a/grid.html
+++ b/grid.html
@@ -4,41 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid Check</title>
-    <style>
-      .item {
-        border: solid aquamarine;
-      }
-      .container {
-        display: grid;
-        grid-template-columns: 200px 200px;
-        grid-template-columns: repeat(4, 2fr);
-      }
-    </style>
+    <title>Grid</title>
+    <link rel="stylesheet" href="styles/grid.css" />
   </head>
   <body>
-    <h2>Explore Grid Layout: 2D layout</h2>
     <div class="container">
-      <div class="item">item - 1</div>
-      <div class="item">item - 2</div>
-      <div class="item">item - 3</div>
-      <div class="item">item - 4</div>
-      <div class="item">item - 5</div>
-      <div class="item">item - 6</div>
-      <div class="item">item - 7</div>
-      <div class="item">item - 8</div>
-      <div class="item">item - 9</div>
-      <div class="item">item - 10</div>
-      <div class="item">item - 11</div>
-      <div class="item">item - 12</div>
-      <div class="item">item - 13</div>
-      <div class="item">item - 14</div>
-      <div class="item">item - 15</div>
-      <div class="item">item - 16</div>
-      <div class="item">item - 17</div>
-      <div class="item">item - 18</div>
-      <div class="item">item - 19</div>
-      <div class="item">item - 20</div>
+      <div class="box" id="box-1">Box - 1</div>
+      <div class="box" id="box-2">Box - 2</div>
+      <div class="box" id="box-3">Box - 3</div>
+      <div class="box" id="box-4">Box - 4</div>
+      <div class="box" id="box-5">Box - 5</div>
+      <div class="box" id="box-6">Box - 6</div>
+      <div class="box" id="box-7">Box - 7</div>
+      <div class="box" id="box-8">Box - 8</div>
+      <div class="box" id="box-9">Box - 9</div>
+      <div class="box" id="box-10">Box - 10</div>
+      <div class="box" id="box-11">Box - 11</div>
+      <div class="box" id="box-12">Box - 12</div>
     </div>
   </body>
 </html>
